--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask==1.0.2
 Flask-Cors==3.0.7
 requests==2.21.0
 treelib==1.5.5
-urllib3==1.24.1
+urllib3>=1.24.2
 validators==0.12.5
 gunicorn==19.9.0
 Flask-HTTPAuth==3.2.4
